--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,21 @@
 akka {
+
   loggers  = [akka.event.slf4j.Slf4jLogger]
   loglevel = debug
 
   actor {
+    provider = "akka.remote.RemoteActorRefProvider"
     debug {
       lifecycle = on
       unhandled = on
+    }
+  }
+
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 2559
     }
   }
 }
